--- a/Servidor/package.json
+++ b/Servidor/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
     "colors": "^1.4.0",
-    "express": "^4.21.1"
+    "ejs": "^3.1.10",
+    "express": "^4.21.1",
+    "mongodb": "4.12"
   },
   "name": "servidor",
   "version": "1.0.0",
